modify to static link

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,13 @@ console_error_panic_hook = "0"
 js-sys = "0"
 wasm-bindgen = { version = "0", features = ["enable-interning"] }
 wasm-bindgen-futures = { version = "0" }
-web-sys = { version = "0", features = ["TextDecoder", "ImageData", "Window", "Response", "Blob"] }
+web-sys = { version = "0", features = [
+    "TextDecoder",
+    "ImageData",
+    "Window",
+    "Response",
+    "Blob",
+] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 libloading = "0"
@@ -47,11 +53,15 @@ bindgen = { version = "0" }
 [dev-dependencies]
 # Dependencies specific to examples. Dependencies for the WASM example in examples/wasm.rs
 # are specified separately in examples/Cargo.toml.
-rand = "0" # Used by examples/create.rs, examples/matrix.rs
+rand = "0"  # Used by examples/create.rs, examples/matrix.rs
 rayon = "1" # Used by examples/thread_safe.rs
 
 [features]
-default = ["image", "thread_safe"] # The image feature is implicit because the image dependency is optional.
+default = [
+    "image",
+    "thread_safe",
+    "static",
+] # The image feature is implicit because the image dependency is optional.
 bindings = []
 static = []
 thread_safe = []
